updated email address to mia@

--- a/app/views/pages/copyright.html.erb
+++ b/app/views/pages/copyright.html.erb
@@ -38,7 +38,7 @@ Provide your full legal name and your electronic or physical signature.
 Send this Notice, with all items completed, to The Teen Magazine's Designated Copyright Agent:
 </p>
 <p>
-Email: miajohansson@college.harvard.edu<br>
+Email: mia@theteenmagazine.com<br>
 Copyright Agent<br>
 The Teen Magazine<br>
 </p>
