--- a/app/views/pages/images.html.erb
+++ b/app/views/pages/images.html.erb
@@ -55,23 +55,26 @@
     </li>
     <li>
       <b class="text-decoration-underline">Consequences for not adhering to this policy</b>: <span style="background-color: #FCD04D">If you wrongly accept this policy from the date hereof without adhering to the rules in this image policy, your writer account will be suspended and your article will be unpublished.
-      If you accepted the old image policy before it was updated, you are still responsible for updating your articles, however you have until <b>10/31/23</b> to comply with the new policy.</span> After that, images in your articles may be deleted by editors, and in some cases, your article(s) will be unpublished. You may also be held accountable for any resulting copyright infringement or other legal consequences The Teen Magazine receives as a result of your infringing image(s).
-      You are solely responsible for the images you use in your content, and you must indemnify and hold our platform harmless from any claims, damages, or losses resulting from your failure to comply with this policy.
-    </li>
+      If you accepted the old image policy before it was updated, you are still responsible for updating your articles, however you have until <b>10/31/23</b> to comply with the new policy.</span> After that, images in your articles may be deleted by editors, and in some cases, your article(s) will be unpublished. 
   </ul>
+  <p>
+      By using images in your content, you acknowledge and agree to comply with this Image Usage Policy. Failure to follow this policy may result in removal of your content from our platform and may make you liable for any legal consequences arising from copyright infringement or other violations. It is your responsibility to ensure that you have proper rights and permissions for any images used in your content, and to promptly remove any images that are found to be in violation of this policy or applicable copyright laws.
+  </p>
   <h3><b>Embedding Social Media Posts</b></h3>
   <p>
-    The Teen Magazine allows embedding social media posts in your articles. Since you're not uploading a copy of the image or video, 
-    it is legally considered a "link" and therefore is not copyright infringement.
+    The Teen Magazine allows embedding social media posts in your articles from the following websites:
   </p>
+  <ul>
+    <li><a href="https://www.instagram.com/">https://www.instagram.com/</a></li>
+    <li><a href="https://www.tiktok.com/">https://www.tiktok.com/</a></li>
+    <li><a href="https://www.youtube.com/">https://www.youtube.com/</a></li>
+    <li><a href="https://twitter.com/">https://twitter.com/</a></li>
+  </ul>
   <p>
     This is an ongoing issue however and The Teen Magazine reserves the right to change this policy depending on what the higher courts say. Read more about the issue here:
     <ul>
       <li><a target="_blank" href="https://www.sportico.com/law/analysis/2023/embedded-instagram-posts-not-infringement-1234731168/">https://www.sportico.com/law/analysis/2023/embedded-instagram-posts-not-infringement-1234731168/</a></li>
     </ul>
-  </p>
-  <p>
-    By using images in your content, you acknowledge and agree to comply with this Image Usage Policy. Failure to follow this policy may result in removal of your content from our platform and may make you liable for any legal consequences arising from copyright infringement or other violations. It is your responsibility to ensure that you have proper rights and permissions for any images used in your content, and to promptly remove any images that are found to be in violation of this policy or applicable copyright laws.
   </p>
   <p>
     If you have any questions about the image policy or following the image guidelines, you can post in the <b>Discord chat</b> <a href="https://discord.com/channels/1081601449550688286/1081601450737676474">here</a>.
