--- a/app/views/pitches/show.html.erb
+++ b/app/views/pitches/show.html.erb
@@ -51,7 +51,6 @@
   <% if @pitch.following_level.present? %>
     <span class="badge badge-pill badge-info"><%= @pitch.following_level %> followers</span>
   <% end %>
-  <%= markdown @pitch.description %>
   <% if @pitch.admin_notes.present? %>
     <p><i style="background-color: #FCD04D;">Admin Notes: <%= @pitch.admin_notes %></i></p>
   <% end %>
@@ -68,6 +67,11 @@
     <% end %>
     <%= render "posts/partials/header_image", post: @pitch, img_class: "card-img-top" %>
   <% end %>
+  <div id="content">
+    <div class="post_content">
+      <%= markdown @pitch.description %>
+    </div>
+  </div>
   <% if @pitch.requirements.present? %>
     <i>Notes:</i>
     <%= markdown @pitch.requirements %>
