--- a/app/views/layouts/writer.html.erb
+++ b/app/views/layouts/writer.html.erb
@@ -26,8 +26,14 @@
     </script>
     <%= javascript_include_tag 'application' %>
     <%= javascript_include_tag 'writer' %>
-    <script src="https://cdn.ckeditor.com/ckeditor5/39.0.2/super-build/ckeditor.js"></script>
-    <script src="https://cdn.ckbox.io/ckbox/2.1.0/ckbox.js"></script>
+    <% if @load_only_ck_box %>
+      <script src="https://cdn.ckbox.io/ckbox/2.1.0/ckbox.js"></script>
+    <% elsif (params[:controller].eql? 'posts') || (params[:controller].eql? 'pitches') || (params[:controller].eql? 'newsletters') %>
+      <%= stylesheet_link_tag 'ckeditor' %>
+      <script src="https://cdn.ckeditor.com/ckeditor5/39.0.2/super-build/ckeditor.js"></script>
+      <script src="https://cdn.ckbox.io/ckbox/2.1.0/ckbox.js"></script>
+      <script type="text/javascript" src="https://svc.webspellchecker.net/spellcheck31/wscbundle/wscbundle.js"></script>
+    <% end %>
     <script type="text/javascript" async="async" data-noptimize="1" data-cfasync="false" src="//scripts.mediavine.com/tags/the-teen-magazine.js"></script>
     <meta http-equiv="Content-Security-Policy" content="block-all-mixed-content">
     <% if current_user.partner %>
