--- a/app/views/newsletters/new.html.erb
+++ b/app/views/newsletters/new.html.erb
@@ -1,4 +1,4 @@
 <div id="banner_writing" class="editor"></div>
-<div class="apply_wrapper pitch_form_wrapper">
+<div class="apply_wrapper newsletter_form_wrapper">
   <%= render "newsletters/form" %>
 </div>
