--- a/app/views/pitches/_form.html.erb
+++ b/app/views/pitches/_form.html.erb
@@ -1,109 +1,135 @@
-<%= form_for @pitch do |f| %>
-  <% if @pitch.errors.any? %>
-    <h6 class="mt-3 text-danger"><%= pluralize(@pitch.errors.count, "error")%> prevented this pitch from saving:</h6>
-    <ul>
-      <% @pitch.errors.full_messages.each do |msg| %>
-        <li class="text-danger">
-          <h6><%= msg %></h6>
-        </li>
-      <% end %>
-    </ul>
+<%= form_for @pitch, html: {:id => "ck-form"} do |f| %>
+<% if @pitch.errors.any? %>
+  <h6 class="mt-3 text-danger"><%= pluralize(@pitch.errors.count, "error")%> prevented this pitch from saving:</h6>
+  <ul>
+    <% @pitch.errors.full_messages.each do |msg| %>
+      <li class="text-danger">
+        <h6><%= msg %></h6>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
+<div class="pitch_flds">
+  <% if current_user.editor? && @pitch.title.nil? %>
+    <p>You are signed in with an Editor account. This pitch will show up in <a target="_blank" href="/pitches">Unclaimed Pitches</a> for any writer to claim.</p>
+  <% else %>
+    <p>Don't know what to write about? Visit <a target="_blank" href="/choosing-a-topic#topic-requirements">Topic Requirements</a> for some inspiration.</p>
   <% end %>
-  <div class="pitch_flds">
-    <% if current_user.editor? && @pitch.title.nil? %>
-      <p>You are signed in with an Editor account. This pitch will show up in <a target="_blank" href="/pitches">Unclaimed Pitches</a> for any writer to claim.</p>
-    <% else %>
-      <p>Don't know what to write about? Visit <a target="_blank" href="/choosing-a-topic#topic-requirements">Topic Requirements</a> for some inspiration.</p>
-    <% end %>
-    <p>Write a <a target="_blank" class="link_grn" href="/choosing-a-topic#title-requirements">Shareable and/or Searchable</a> title here:</p>
-    <%= f.text_field :title, placeholder: "Title" %>
-    <p>Explain your idea and why the article topic fits <a target="_blank" class="link_grn" href="/choosing-a-topic#topic-requirements">The Teen Magazine's audience</a>:</p>
-    <%= f.text_area :description, placeholder: "Your idea..." %>
-    <div class="margin_flds mt-0">
-      <%= f.collection_select(:category_id, @categories, :id, :name, {prompt: "Select a Category"}) %>
-    </div>
-    <div class="margin_flds">
-      <% @prompt = current_user.editor? ? "Select a Deadline" : "Set a deadline (Optional)" %>
-      <% if @pitch.is_interview? %>
-        <p>How many followers does you/your client have?
-          <%= f.select(:following_level, ['less than 100k', 'between 100k and 500k', 'between 500k and 1 million', 'over 1 million'], {prompt: "None selected"}) %></p>
-        <p>What description fits you/your client the best?
-          <%= f.select(:interview_kind, ['Actor', 'Actress', 'Author', 'Artist', 'Activist', 'Content Creator', 'Influencer', 'Musician', 'Youtuber', 'Other'], {prompt: "None selected"}) %>
-        </p>
-        <p>
-          Please indicate the social media platform you can share the article link. (You will get to see the draft before it's published.)
-        </p>
-        <%= f.select(:platform_to_share, ['Instagram story w/ link (preferred)', 'Instagram post description', 'Youtube shoutout', 'Twitter tweet', 'Pinterest post', 'LinkedIn post'], {prompt: "None selected"}) %>
-        <p>Admin notes about this pitch</p>
-        <%= f.text_area :admin_notes, placeholder: "No notes" %>
-        <%= f.select(:deadline, options_for_select(["6 weeks", "8 weeks"], [6, 8]), {prompt: @prompt}, {:class => "d-inline"}) %>
-      <% else %>
-        <%= f.select(:deadline, options_for_select(["2 weeks", "4 weeks"], [2, 4]), {prompt: @prompt}, {:class => "d-inline"}) %>
-      <% end %>
-      <a data-toggle="tooltip" title="Read about deadlines" class="ml-1 link_grn" target="_blank" href="/writing-the-perfect-article#deadlines-and-extensions"><svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="fad" data-icon="info-circle" class="mb-1 svg-inline--fa fa-info-circle fa-w-16" role="img" viewBox="0 0 512 512"><g class="fa-group"><path class="fa-secondary" fill="currentColor" d="M256 8C119 8 8 119.08 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 110a42 42 0 1 1-42 42 42 42 0 0 1 42-42zm56 254a12 12 0 0 1-12 12h-88a12 12 0 0 1-12-12v-24a12 12 0 0 1 12-12h12v-64h-12a12 12 0 0 1-12-12v-24a12 12 0 0 1 12-12h64a12 12 0 0 1 12 12v100h12a12 12 0 0 1 12 12z" opacity="0.4"></path><path class="fa-primary" fill="currentColor" d="M256 202a42 42 0 1 0-42-42 42 42 0 0 0 42 42zm44 134h-12V236a12 12 0 0 0-12-12h-64a12 12 0 0 0-12 12v24a12 12 0 0 0 12 12h12v64h-12a12 12 0 0 0-12 12v24a12 12 0 0 0 12 12h88a12 12 0 0 0 12-12v-24a12 12 0 0 0-12-12z"></path></g></svg></a>
-    </div>
-    <% if current_user && current_user.is_manager? %>
-      <p>Priority (select <b>High</b> for SEO pitches and high-priority topics)
-        <%= f.select(:priority, ["None", "High"], {prompt: "None"}, {:class => "d-inline"}) %>
+  <p>Write a <a target="_blank" class="link_grn" href="/choosing-a-topic#title-requirements">Shareable and/or Searchable</a> title here:</p>
+  <%= f.text_field :title, placeholder: "Create Intrigue With Your Title 📚👀" %>
+  <p>Explain your idea and why the article topic fits <a target="_blank" class="link_grn" href="/choosing-a-topic#topic-requirements">The Teen Magazine's audience</a>:</p>
+  <div id="container">
+    <%= f.text_area :description, id: "editor", placeholder: "Your idea..." %>
+  </div>
+  <div class="mt-3">
+    <%= f.collection_select(:category_id, @categories, :id, :name, {prompt: "Select a Category"}) %>
+  </div>
+  <div class="mt-3">
+    <% @prompt = current_user.editor? ? "Select a Deadline" : "Set a deadline (Optional)" %>
+    <% if @pitch.is_interview? %>
+      <p>How many followers does you/your client have?
+        <%= f.select(:following_level, ['less than 100k', 'between 100k and 500k', 'between 500k and 1 million', 'over 1 million'], {prompt: "None selected"}) %></p>
+      <p>What description fits you/your client the best?
+        <%= f.select(:interview_kind, ['Actor', 'Actress', 'Author', 'Artist', 'Activist', 'Content Creator', 'Influencer', 'Musician', 'Youtuber', 'Other'], {prompt: "None selected"}) %>
       </p>
+      <p>
+        Please indicate the social media platform you can share the article link. (You will get to see the draft before it's published.)
+      </p>
+      <%= f.select(:platform_to_share, ['Instagram story w/ link (preferred)', 'Instagram post description', 'Youtube shoutout', 'Twitter tweet', 'Pinterest post', 'LinkedIn post'], {prompt: "None selected"}) %>
+      <p>Admin notes about this pitch</p>
+      <%= f.text_area :admin_notes, placeholder: "No notes" %>
+      <%= f.select(:deadline, options_for_select(["6 weeks", "8 weeks"], [6, 8]), {prompt: @prompt}, {:class => "d-inline"}) %>
+    <% else %>
+      <%= f.select(:deadline, options_for_select(["2 weeks", "4 weeks"], [2, 4]), {prompt: @prompt}, {:class => "d-inline"}) %>
     <% end %>
-    <% if !@pitch.is_interview? %>
-      <% if @pitch.thumbnail.attached? %>
-        <%= image_tag(@pitch.thumbnail.variant(resize_to_fill: [540,380], format: 'webp'), alt: @pitch.title, :class => "card-img-top")%>
-      <% elsif @pitch.try(:thumbnail).present? %>
-        <%= image_tag(@pitch.thumbnail.variant(resize_to_fill: [540, 380]), class: "image_fit_scrn mb-4") %>
+    <a data-toggle="tooltip" title="Read about deadlines" class="ml-1 link_grn" target="_blank" href="/writing-the-perfect-article#deadlines-and-extensions"><svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="fad" data-icon="info-circle" class="mb-1 svg-inline--fa fa-info-circle fa-w-16" role="img" viewBox="0 0 512 512"><g class="fa-group"><path class="fa-secondary" fill="currentColor" d="M256 8C119 8 8 119.08 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 110a42 42 0 1 1-42 42 42 42 0 0 1 42-42zm56 254a12 12 0 0 1-12 12h-88a12 12 0 0 1-12-12v-24a12 12 0 0 1 12-12h12v-64h-12a12 12 0 0 1-12-12v-24a12 12 0 0 1 12-12h64a12 12 0 0 1 12 12v100h12a12 12 0 0 1 12 12z" opacity="0.4"></path><path class="fa-primary" fill="currentColor" d="M256 202a42 42 0 1 0-42-42 42 42 0 0 0 42 42zm44 134h-12V236a12 12 0 0 0-12-12h-64a12 12 0 0 0-12 12v24a12 12 0 0 0 12 12h12v64h-12a12 12 0 0 0-12 12v24a12 12 0 0 0 12 12h88a12 12 0 0 0 12-12v-24a12 12 0 0 0-12-12z"></path></g></svg></a>
+  </div>
+  <% if current_user && current_user.is_manager? %>
+    <p>Priority (select <b>High</b> for SEO pitches and high-priority topics)
+      <%= f.select(:priority, ["None", "High"], {prompt: "None"}, {:class => "d-inline"}) %>
+    </p>
+  <% end %>
+  <% if !@pitch.is_interview? %>
+    <% if @pitch.thumbnail.present? %><p>Thumbnail Preview</p><% end %>
+    <div class="d-flex flex-row flex-wrap align-items-end justify-content-between">
+      <% if @pitch.thumbnail.present? %>
+        <%= image_tag(@pitch.thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), class: 'mw-100') %>
       <% end %>
-      <div class="margin_flds">
-        <p>Upload a <a target="_blank" href="/choosing-a-topic#thumbnail-requirements">royalty free and eye catching</a> thumbnail image that meets the <a class="text-decoration-underline" target="_blank" href="/finding-images">image policy requirements</a>:</p>
-        <%= f.file_field :thumbnail %>
-      </div>
+      <p id="showDialogButton" class="btn btn-primary mt-3 m-0 d-inline">Select thumbnail</p>
+    </div>
+    <p id="showSelectedUrl"></p>
+    <%= f.hidden_field :thumbnail_url, id: "thumbnail-field", value: nil, class: "mb-0" %>
+    <div id="ckbox"></div>
+    <% if @pitch.thumbnail.present? && @pitch.thumbnail_credits.nil? %>
       <p><u>Give credit for your thumbnail image (Required)</u>. Use the formatting: photographer's last name (if given) + "from" + company's name + comma + full url to the site. 
       <i>If you do not properly cite your thumbnail image, it will not show up in the published article.</i></p>
-      <%= f.text_field :thumbnail_credits, placeholder: 'Langevin from Pexels, https://www.pexels.com/photo/woman-in-a-baseball-cap-sitting-by-a-painting-with-paints-10752105/', class: "mb-0" %>
-      <% if (@pitch.user_id.eql? current_user.id) %>
-        <p>
+      <%= f.text_field :thumbnail_credits, placeholder: 'Langevin from Pexels, https://www.pexels.com/photo/woman-in-a-baseball-cap-sitting-by-a-painting-with-paints-10752105/', class: "mb-0",  id: "thumbnail-credits" %>
+    <% else %>
+      <%= f.hidden_field :thumbnail_credits, class: "mb-0",  id: "thumbnail-credits" %>
+    <% end %>
+    <p class="mt-0"><i>
+      Do you have an image that meets <a href="/finding-images" class="link_grn">The Teen Magazine's image requirements</a> that you want to include in this pitch? 
+      Request that it be uploaded to The Teen Magazine's image asset library through the form 
+      <%= link_to 'here', send_user_email_path(:recipient_id => 1, :request_image => true, :pitch_id => @pitch.id), class: "link_grn", target: "_blank" %>.
+    </i></p>
+    <% if (@pitch.user_id.eql? current_user.id)  %>
+      <% if (@pitch.created_at.present? && @pitch.created_at < Date.new(2023, 9, 30)) %>
+        <div>
           <div class="alert alert-warning" role="alert">
             Due to an ongoing copyright issue, <b>our image policy has changed as of September 4th, 2023</b>. Please read the <a target="_blank" class="link_underline"  href="/finding-images">updated image policy</a> before checking the box below.
           </div>
-          <i>
+          <p><i>
             <%= f.check_box :agree_to_image_policy, class: "d-inline" %>
               I have read and understand the image policy found <a target="_blank" class="link_nrml" href="/finding-images">here</a>. By checking this box, I confirm that the thumbnail image on this pitch has the proper attributions and follows all the requirements explained in the Image Policy. I understand that uploading any photo without the rights to use it means that I can be held personally liable for any claims of copyright infringement.
-          </i>
+          </i></p>
           <% if @pitch.agree_to_image_policy.nil? || !@pitch.agree_to_image_policy %>
             <%= f.hidden_field :agree_to_image_policy_at, value: Time.now %>
           <% end %>
-        </p>
-      <% elsif !@pitch.agree_to_image_policy %>
-        <p>
-          <i>
-            <%= @pitch.user.full_name %> has not agreed to the image policy.
-          </i>
-        </p>
+        </div>
       <% else %>
-        <p>
-          <i>
-            <%= @pitch.user.full_name %> agreed to the image policy<% if @pitch.agree_to_image_policy_at.present? %> on <%= format_date(@pitch.agree_to_image_policy_at) %><% end %>.
-          </i>
-        </p>
+          <%= f.hidden_field :agree_to_image_policy, value: 1 %>
+          <% if @pitch.agree_to_image_policy.nil? || !@pitch.agree_to_image_policy %>
+            <%= f.hidden_field :agree_to_image_policy_at, value: Time.now %>
+          <% end %>
       <% end %>
-    <% end %>
-    <% if @pitch.status.nil? && !(@pitch.user.try(:editor) || current_user.editor) %>
-      <%= f.hidden_field :status, value: "Ready for Review" %>
-      <% @button_text = "Submit Pitch" %>
-    <% elsif @pitch.slug.nil? %>
-      <% @button_text = "Share Pitch" %>
+    <% elsif !@pitch.agree_to_image_policy %>
+      <p>
+        <i style="background-color: #FCD04D;">
+          <%= @pitch.user.full_name %> has not agreed to the image policy.
+        </i>
+      </p>
     <% else %>
-      <% @button_text = "Save Changes" %>
+      <p>
+        <i>
+          <%= @pitch.user.full_name %> agreed to the image policy<% if @pitch.agree_to_image_policy_at.present? %> on <%= format_date(@pitch.agree_to_image_policy_at) %><% end %>.
+        </i>
+      </p>
     <% end %>
-    <div class="btn_cntnr mb-0 pb-0 pt-3" style="float: none; position: relative;">
-      <div class="spinner-button spinner-border hide" style="margin-left: 38%;" role="status">
-        <span class="sr-only">Loading...</span>
-      </div>
-      <%= f.button @button_text, class: "newpost--new--profile mr-0 pl-4 pr-4 mb-0 submit_modal", id: "submit-comment-modal-button" %>
+  <% end %>
+  <% if @pitch.status.nil? && !(@pitch.user.try(:editor) || current_user.editor) %>
+    <%= f.hidden_field :status, value: "Ready for Review" %>
+    <% @button_text = "Submit Pitch" %>
+  <% elsif @pitch.slug.nil? %>
+    <% @button_text = "Share Pitch" %>
+  <% else %>
+    <% @button_text = "Save Changes" %>
+  <% end %>
+  <div class="btn_cntnr mb-0 pb-0 pt-3" style="float: none; position: relative;">
+    <div class="spinner-button spinner-border hide" style="margin-left: 38%;" role="status">
+      <span class="sr-only">Loading...</span>
     </div>
-    <% if !@pitch.is_interview? && current_user.editor? %>
-      <div class="alert alert-info mt-4" role="alert">
-        <p class="m-0">Note: If this pitch does not fit The Teen Magazine's audience as described in <a target="_blank" href="/pitching-new-articles">Pitching New Articles</a>, an admin reserves the right to delete the pitch from Editor Pitches at any time. Deleted pitches will not be counted toward your required pitches every month.</p>
-      </div>
-    <% end %>
+    <%= f.button @button_text, class: "newpost--new--profile mr-0 pl-4 pr-4 mb-0 submit_modal", id: "submit-comment-modal-button" %>
+  </div>
+  <% if !@pitch.is_interview? && current_user.editor? %>
+    <div class="alert alert-info mt-4" role="alert">
+      <p class="m-0">Note: If this pitch does not fit The Teen Magazine's audience as described in <a target="_blank" href="/pitching-new-articles">Pitching New Articles</a>, an admin reserves the right to delete the pitch from Editor Pitches at any time. Deleted pitches will not be counted toward your required pitches every month.</p>
+    </div>
+  <% end %>
 <% end %>
+<script>
+  window.WEBSPELLCHECKER_CONFIG = {
+    autoSearch: true,
+    serviceId: "<%= ENV["WEBSPELLCHECKER_ID"] %>"
+  };
+</script>
+<%= javascript_include_tag 'ckeditor' %>
