hide social media scripts for privacy reasons

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -5,3 +5,38 @@
     }
   }
 }
+
+.hidden-social-media-wrapper {
+  background: #f7f7f3;
+  border-color: rgb(229, 229, 229);
+  border-width: 1px;
+  border-style: solid;
+  box-sizing: border-box;
+  padding: 12px 16px;
+  margin: 10px 0px;
+
+  .hidden-social-media-message {
+    text-transform: none;
+    font-feature-settings: normal;
+    font-style: normal;
+    letter-spacing: normal;
+    line-break: auto;
+    line-height: 1.5em;
+    font-size: 12px;
+    font-weight: 400;
+    overflow-wrap: normal;
+    color: rgb(33, 33, 33);
+    text-align: center;
+
+    #message {
+      text-transform: none;
+      font-feature-settings: normal;
+      font-style: normal;
+      letter-spacing: normal;
+      line-break: auto;
+      line-height: 1.5em;
+      font-size: 14px !important;
+      text-align: center;
+    }
+  }
+}
