--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,9 @@
     <%= stylesheet_link_tag params[:controller] %>
     <%= stylesheet_link_tag 'application'  %>
     <%= javascript_include_tag 'application'%>
+    <% if params[:controller].eql? 'posts' %>
+        <%= javascript_include_tag 'hidesocialmedia'%>
+    <% end %>
     <script type="text/javascript" async="async" data-noptimize="1" data-cfasync="false" src="//scripts.mediavine.com/tags/the-teen-magazine.js"></script>
     <meta http-equiv="Content-Security-Policy" content="block-all-mixed-content">
   </head>
