--- a/app/views/layouts/writer.html.erb
+++ b/app/views/layouts/writer.html.erb
@@ -30,6 +30,7 @@
       <script src="https://cdn.ckbox.io/ckbox/2.1.0/ckbox.js"></script>
     <% elsif (params[:controller].eql? 'posts') || (params[:controller].eql? 'pitches') || (params[:controller].eql? 'newsletters') %>
       <%= stylesheet_link_tag 'ckeditor' %>
+      <%= javascript_include_tag 'hidesocialmedia'%>
       <script src="https://cdn.ckeditor.com/ckeditor5/39.0.2/super-build/ckeditor.js"></script>
       <script src="https://cdn.ckbox.io/ckbox/2.1.0/ckbox.js"></script>
       <script type="text/javascript" src="https://svc.webspellchecker.net/spellcheck31/wscbundle/wscbundle.js"></script>
