--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -35,7 +35,7 @@
       </p>
     <% end %>
     <div id="container" class="<%= @should_show_editor_form && !@post.editor_can_make_changes ? 'not-editable' : '' %>">
-      <%= f.text_area :content, id: "editor" %>
+      <%= f.text_area :content, value: @post.content, id: "editor" %>
     </div>
     <p class="d-block mt-0 mb-0">Category:<%= f.collection_select(:category_id, @categories, :id, :name, {prompt: "Select a Category"}, :class => "mdb-select md-form mb-0") %></p>
     <% if @post.thumbnail.present? %><p>Thumbnail Preview</p><% end %>
