fixing on edit changes

--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -384,6 +384,9 @@
       margin: 25px auto !important;
       display: block;
     }
+    .responsive-iframe-container {
+      padding: 0px !important;
+    }
     figcaption {
       text-align: center;
     }
