added spotify to list of ok to embed websites

--- a/app/views/pages/images.html.erb
+++ b/app/views/pages/images.html.erb
@@ -67,6 +67,7 @@
     <li><a href="https://www.tiktok.com/">https://www.tiktok.com/</a></li>
     <li><a href="https://www.youtube.com/">https://www.youtube.com/</a></li>
     <li><a href="https://twitter.com/">https://twitter.com/</a></li>
+    <li><a href="https://spotify.com/">https://spotify.com/</a></li>
   </ul>
   <p>
     Embedding images is an ongoing legal issue however, and The Teen Magazine reserves the right to change this policy depending on what the higher courts say. Read more about the issue here:
