do not cache hidesocialmedia content

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,9 @@
     <%= stylesheet_link_tag params[:controller] %>
     <%= stylesheet_link_tag 'application'  %>
     <%= javascript_include_tag 'application'%>
+    <%= javascript_include_tag 'layout', cache: false %>
     <% if params[:controller].eql? 'posts' %>
-        <%= javascript_include_tag 'hidesocialmedia'%>
+        <%= javascript_include_tag 'hidesocialmedia', cache: false %>
     <% end %>
     <meta http-equiv="Content-Security-Policy" content="block-all-mixed-content">
   </head>
@@ -48,6 +49,5 @@
       <div class="toggle-nav" onclick="toggleNav();" id="navigation_overlay"></div>
       <%= render "layouts/partials/footer" %>
     </div>
-    <%= javascript_include_tag 'layout'%>
   </body>
 </html>
