--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -41,7 +41,7 @@
     <% if @post.thumbnail.present? %><p>Thumbnail Preview</p><% end %>
     <div class="d-flex flex-row flex-wrap align-items-end justify-content-between">
       <% if @post.thumbnail.present? %>
-        <%= image_tag(@post.thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), class: 'mw-100') %>
+        <%= image_tag(@post.thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), class: 'mw-100', loading: 'lazy') %>
       <% end %>
       <p id="showDialogButton" class="btn btn-primary mt-3 m-0 d-inline">New thumbnail</p>
     </div>
