--- a/app/views/categories/dashboard.html.erb
+++ b/app/views/categories/dashboard.html.erb
@@ -108,7 +108,7 @@
             </div>
 		   <div class="tab-pane fade" id="follow-classic" role="tabpanel" aria-labelledby="activity-tab-classic">
             <h5 class="pitch_ttl">Editor Activity</h5>
-            <%= render_async_cache get_editor_activity_path(category_id: @category.id), toggle: { selector: '#activity-tab-classic', event: :click } do %>
+            <%= render_async get_editor_activity_path(category_id: @category.id), toggle: { selector: '#activity-tab-classic', event: :click } do %>
               <div class="d-flex justify-content-center">
                 <div class="spinner-border" role="status">
                   <span class="sr-only">Loading...</span>
