--- a/app/views/posts/partials/_side_bar_published.html.erb
+++ b/app/views/posts/partials/_side_bar_published.html.erb
@@ -3,7 +3,7 @@
     <div class="flex_other_articles">
       <div class="contain_articles">
         <h3 style="margin-bottom: 18px;">Recent in <%= link_to(@post.category.name, @post.category, :class => "category_title_trending") %></h3>
-        <%= render_async_cache get_recent_posts_in_category_path(id: @post.id) do %>
+        <%= render_async get_recent_posts_in_category_path(id: @post.id) do %>
           <div style="height: 366px; width: 100%; display: block; margin-bottom: 15px;"></div>
         <% end %>
         <% if @post.is_interview? %>
