--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -22,7 +22,7 @@
       <% end %>
     </h2>
     <% if user.editor? %>
-      <%= render_async_cache get_editor_stats_path(id: user) %>
+      <%= render_async get_editor_stats_path(id: user) %>
     <% elsif user.partner? %>
       <span class="editor_status">Partner Account with The Teen Magazine</span>
     <% else %>
