--- a/app/views/users/interviewers.html.erb
+++ b/app/views/users/interviewers.html.erb
@@ -30,7 +30,7 @@
           <% end %>
           <% if user.editor? %>
             <br>
-            <%= render_async_cache get_editor_stats_path(id: user) %>
+            <%= render_async get_editor_stats_path(id: user) %>
           <% end %>
             <p class="description_user" style="margin-top: 5px;"><%= user.description %></p>
             <% if current_user.is_manager? %>
