--- a/app/views/users/promote_post.js.erb
+++ b/app/views/users/promote_post.js.erb
@@ -2,5 +2,5 @@ $("#promotion_points").text("<%= @user.promotions - 1 %>");
 $('#preview-post-to-promote').html("<%= j(render partial: 'users/dashboard/tabs/articles/preview_post_confirmation') %>");
 var container = document.getElementById('published-articles');
 var event = new Event('refresh');
-// Dispatch 'refresh' on the render_async_cache container
+// Dispatch 'refresh' on the render container
 container.dispatchEvent(event)
