fixed some more bugs

--- a/app/assets/stylesheets/ckeditor.css.scss
+++ b/app/assets/stylesheets/ckeditor.css.scss
@@ -22,9 +22,9 @@
   margin: 0;
 }
 
-.ck .ck-voice-label {
-  display: none;
-}
+// .ck .ck-voice-label {
+//   display: none;
+// }
 
 .pitch_flds,
 .newsletter_form_wrapper {
@@ -56,18 +56,18 @@
   }
 }
 
-.ckbox-button-group,
-.ckbox-topbar-actions {
-  display: none !important;
-}
+// .ckbox-button-group,
+// .ckbox-topbar-actions {
+//   display: none !important;
+// }
 
 .ckbox-topbar__side-content {
   margin-left: auto !important;
 }
 
-.ckbox-navbar-item-container:last-child {
-  display: none !important;
-}
+// .ckbox-navbar-item-container:last-child {
+//   display: none !important;
+// }
 
 .btn-primary {
   background-color: #4abeb6 !important;
