--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,19 +1,27 @@
 <div class="privacy" style="width: 80%; max-width: 1000px; margin: 0 auto;">
-  <h1 id="page_title">The Teen Magazine Privacy Policy - Protecting Your Personally Identifiable Information (PII)</h1>
-  <p>At The Teen Magazine, we are deeply committed to safeguarding your Personally Identifiable Information (PII) in accordance with US privacy laws and information security standards. PII refers to information that can identify, contact, or locate an individual, either alone or in conjunction with other data. To provide you with clarity regarding the handling of your PII, please carefully review our privacy policy, which explains how we collect, utilize, and protect your information within the scope of our website.</p>
+  <h1 id="page_title">The Teen Magazine Privacy Policy - Protecting Your Personally Identifiable Information</h1>
+  <p>At The Teen Magazine, we are deeply committed to safeguarding your Personally Identifiable Information in accordance with US privacy laws and information security standards. PII refers to information that can identify, contact, or locate an individual, either alone or in conjunction with other data. To provide you with clarity regarding the handling of your personal information, please carefully review our privacy policy, which explains how we collect, utilize, and protect your information within the scope of our website.</p>
 
   <p><strong>What Personal Information Do We Collect?</strong></p>
 
-  <p>When you visit&nbsp;our website, we may request and collect the following PII:</p>
+  <p>When you visit&nbsp;our website, we may request and collect the following:</p>
 
   <ul>
     <li>Name</li>
     <li>Email Address</li>
-    <li>We gather this information when you subscribe to our newsletter, complete forms, or contribute to our website.</li>
-    <li>Other relevant details if you sign up to be a writer for the site include, but are not limited to, an optional profile image, writer bio, and resume.</li>
-    <li>Writers have full control over what information they want to be publically available and we never share our writers' or readers' personal information with any other party.</li>
-    <li>Anyone on the site can request to have their account and all their articles/data deleted by contacting us at editors@theteenmagazine.com.</li>
   </ul>
+  <p>We gather this information when you subscribe to our newsletter, complete forms, or comment on our website.</p>
+  <p>Other relevant details if you apply and/or are accepted to be a writer for the site include, but are not limited to,
+  <ul>
+    <li>Profile image (optional)</li>
+    <li>Writer bio</li>
+    <li>Cover letter</li>
+    <li>Resume</li>
+    <li>Sample writing</li>
+    <li>Activity stats</li>
+  </ul>
+  <p>Writers have full control over what information they want to be publically available (such as their bio or profile photo) and we never share our writers' or readers' personal information with any other party.</p>
+  <p>Anyone on the site can request to have their account and all their articles/data deleted by contacting us at editors@theteenmagazine.com.</p>
 
   <p><strong>How Do We Use Your Information?</strong></p>
 
@@ -34,7 +42,7 @@
 
   <p>Your usage of our website implies consent to Google&#39;s data processing methods as described. Further details about Google Analytics and data handling can be found in Google&#39;s Privacy Policy. To opt out of Google Analytics data collection and analysis, you can install the Google Analytics Opt-out Browser Add-on provided by Google.</p>
 
-  <p><strong>Email Communication</strong>: We send periodic emails regarding articles published on The Teen Magazine&nbsp;or other relevant updates.</p>
+  <p><strong>Email Communication</strong>: We send periodic emails regarding articles published on The Teen Magazine or other relevant updates.</p>
 
   <p><strong>How We Protect Your Information</strong></p>
 
@@ -98,5 +106,5 @@
   <p>For any questions or concerns regarding this privacy policy, please contact us through our contact page <a href="https://www.theteenmagazine.com/contact-us">here</a>.</p>
 
   <p>This privacy policy is designed to ensure the protection of your Personally Identifiable Information while providing transparency about our data practices. Your trust and privacy are of utmost importance to us.</p>
-  <p>Last Edited on 2023-07-16</p>
+  <p>Last Edited on 2023-08-19</p>
 </div>
