--- a/app/views/pitches/_form.html.erb
+++ b/app/views/pitches/_form.html.erb
@@ -53,11 +53,21 @@
     <% if @pitch.thumbnail.present? %><p>Thumbnail Preview</p><% end %>
     <div class="d-flex flex-row flex-wrap align-items-end justify-content-between">
       <% if @pitch.thumbnail.present? %>
-        <%= image_tag(@pitch.thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), class: 'mw-100') %>
+        <%= image_tag(@pitch.thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), class: 'mw-100 pb-3') %>
       <% end %>
-      <p id="showDialogButton" class="btn btn-primary mt-3 m-0 d-inline">Select thumbnail</p>
+      <%
+=begin%>
+ <p id="showDialogButton" class="btn btn-primary mt-3 m-0 d-inline">Select thumbnail</p> 
+<%
+=end%>
     </div>
-    <p id="showSelectedUrl"></p>
+    <%= f.file_field :thumbnail %>
+    <p>(REQUIRED) Give credit for your thumbnail image. Use the formatting: photographer's last name (if given) + "from" + company's name + comma + full url to the site. For a full list of approved websites, please refer to the <a target="_blank" href="/finding-images">image requirements</a>.</p>
+    <%= f.text_field :thumbnail_credits, placeholder: 'Langevin from Pexels, https://www.pexels.com/photo/woman-in-a-baseball-cap-sitting-by-a-painting-with-paints-10752105/', class: "mb-0",  id: "thumbnail-credits" %>
+    <p><i>If you do not properly cite your thumbnail image, the thumbnail will not show up in your pitch.</i></p>
+    <%
+=begin%>
+ <p id="showSelectedUrl"></p>
     <%= f.hidden_field :thumbnail_url, id: "thumbnail-field", value: nil, class: "mb-0" %>
     <div id="ckbox"></div>
     <% if @pitch.thumbnail.present? && @pitch.thumbnail_credits.nil? %>
@@ -71,16 +81,18 @@
       Do you have an image that meets <a href="/finding-images" class="link_grn">The Teen Magazine's image requirements</a> that you want to include in this pitch? 
       Request that it be uploaded to The Teen Magazine's image asset library through the form 
       <%= link_to 'here', send_user_email_path(:recipient_id => 1, :request_image => true, :pitch_id => @pitch.id), class: "link_grn", target: "_blank" %>.
-    </i></p>
+    </i></p> 
+<%
+=end%>
     <% if (@pitch.user_id.eql? current_user.id)  %>
-      <% if (@pitch.created_at.present? && @pitch.created_at < Date.new(2023, 10, 4)) %>
+      <% if true || (@pitch.created_at.present? && @pitch.created_at < Date.new(2023, 10, 4)) %>
         <div>
           <div class="alert alert-warning" role="alert">
-            Due to an ongoing copyright issue, <b>our image policy has changed as of October 4th, 2023</b>. Please read the <a target="_blank" class="link_underline"  href="/finding-images">updated image policy</a> before checking the box below.
+            Due to an ongoing copyright issue, <b>our image policy has changed as of October 19th, 2023</b>. Please read the <a target="_blank" class="link_underline"  href="/finding-images">updated image policy</a> before checking the box below.
           </div>
           <p><i>
             <%= f.check_box :agree_to_image_policy, class: "d-inline" %>
-              I have read and understand the image policy found <a target="_blank" class="link_nrml" href="/finding-images">here</a>. By checking this box, I confirm that the thumbnail image on this pitch has the proper attributions and follows all the requirements explained in the Image Policy. I understand that uploading any photo without the rights to use it means that I can be held personally liable for any claims of copyright infringement.
+              I have read and understand the image policy found <a target="_blank" class="link_nrml" href="/finding-images">here</a>. By checking this box, I confirm that the thumbnail image on this pitch <b>has the proper attributions</b> and follows all the requirements explained in the <a target="_blank" class="link_grn" href="/finding-images">Image Policy</a>. I understand that uploading any photo without the rights to use it means that I can be held personally liable for any claims of copyright infringement.
           </i></p>
           <% if @pitch.agree_to_image_policy.nil? || !@pitch.agree_to_image_policy %>
             <%= f.hidden_field :agree_to_image_policy_at, value: Time.now %>
