--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <%= stylesheet_link_tag params[:controller] %>
     <%= stylesheet_link_tag 'application'  %>
     <%= javascript_include_tag 'application'%>
-    <%= javascript_include_tag 'layout', cache: false %>
+    <%= javascript_include_tag 'layout' %>
     <% if params[:controller].eql? 'posts' %>
     <% end %>
     <meta http-equiv="Content-Security-Policy" content="block-all-mixed-content">
