--- a/app/views/layouts/writer.html.erb
+++ b/app/views/layouts/writer.html.erb
@@ -25,9 +25,8 @@
       window.CKEDITOR_BASEPATH = '/assets/ckeditor/';
     </script>
     <%= javascript_include_tag 'application' %>
-    <%= javascript_include_tag 'layout', cache: false %>
+    <%= javascript_include_tag 'layout' %>
     <% if params[:controller].eql? 'posts' %>
-        <%= javascript_include_tag 'hidesocialmedia', cache: false %>
     <% end %>
     <% if @load_only_ck_box %>
       <script src="https://cdn.ckbox.io/ckbox/2.1.0/ckbox.js"></script>
