verify account with adsense

--- a/app/views/layouts/writer.html.erb
+++ b/app/views/layouts/writer.html.erb
@@ -10,6 +10,8 @@
       gtag('config', 'G-9N2YD8CLJS');
     </script>
     <%= favicon_link_tag 'logo.png' %>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4566416931763342"
+     crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <% if @post.present? && @post.thumbnail.attached? %>
