--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
       gtag('js', new Date());
       gtag('config', 'G-9N2YD8CLJS');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4566416931763342"
+     crossorigin="anonymous"></script>
     <meta name="p:domain_verify" content="b07db16852ac484ab4d32324394040a1"/>
     <%= favicon_link_tag 'logo.png' %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
