updated permissions around creating a partner account

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,7 +20,7 @@
     <%= f.label "Upload partner photo or logo" %><br>
     <%= f.file_field :profile %><br/><br/>
 
-    <%= f.label "Contact Email" %><br>
+    <%= f.label "Contact Email (the partner can use this to log in but no email will get automatically sent to them)" %><br>
     <%= f.text_field :email, placeholder: "Email" %>
 
     <%= f.label "Unique Password:" %>
