--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -38,7 +38,7 @@
       <%= f.text_area :content, value: @post.content, id: "editor" %>
     </div>
     <p class="d-block mt-0 mb-0">Category:<%= f.collection_select(:category_id, @categories, :id, :name, {prompt: "Select a Category"}, :class => "mdb-select md-form mb-0") %></p>
-    <% if @post.partner_id || current_user.admin %>
+    <% if @post.partner_id || current_user.is_manager? %>
       <p>Disclose partnership:
         <%= f.check_box :show_disclosure %>
         <i>
