--- a/app/views/users/partner.html.erb
+++ b/app/views/users/partner.html.erb
@@ -34,7 +34,7 @@
           </div>
         </div>
         <% if current_user.admin? || current_user.editor? %>
-          <div class="btn_cntnr">
+          <div class="btn_cntnr me-4">
             <%= link_to "Share Article with #{@partner.full_name}", "/partners/#{@partner.slug}/share", class: "newpost--new--profile" %>
           </div>
           <br>
